--- a/playlistBrowser/Base.lproj/Main.storyboard
+++ b/playlistBrowser/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="qng-CC-HVY" kind="push" id="FOH-3Y-Hpb"/>
+                                    <segue destination="qng-CC-HVY" kind="push" identifier="showPlaylistDetail" id="FOH-3Y-Hpb"/>
                                 </connections>
                             </button>
                         </subviews>
